# small-model-supremacy

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yaml  demo.py  evaluate.py  generate_data.py  notebookdba33ae8ab.ipynb  pyproject.toml  train.py
.kiro/specs/small-model-supremacy/: .config.kiro  design.md  requirements.md  tasks.md
checkpoints/final/: adapter_config.json
data/: generate_data.py  test.jsonl  train.jsonl  val.jsonl
notebooks/: evaluation_full.py  small_model_supremacy_training.ipynb
schemas/: conference_talk_simple.schema.json  product_listing_medium.schema.json  scientific_paper_complex.schema.json
scripts/: generate_synthetic.py  upload_model_card.py
src/: __init__.py
src/config/: __init__.py  schema.py
src/data/: api_client.py  curator.py  prompt_template.py  tokenizer_utils.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  visualization.py
src/parsing/: __init__.py  output_parser.py
src/schemas/: __init__.py  manager.py
src/training/: __init__.py  callbacks.py  memory.py  trainer.py
src/utils/: logging.py
tests/: test_api_client.py  test_callbacks.py  test_generate_data.py  test_logging.py  test_memory.py  test_prompt_template.py  test_tokenizer_utils.py
