[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-model-supremacy"
version = "0.1.0"
description = "Fine-tuning Qwen2.5 small models to outperform frontier models on structured data extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Small Model Supremacy Team"}
]

dependencies = [
    "transformers==4.46.3",
    "peft==0.13.2",
    "bitsandbytes==0.42.0",
    "datasets==3.1.0",
    "jsonschema==4.23.0",
    "pydantic==2.10.2",
    "wandb==0.18.7",
    "tiktoken==0.8.0",
    "numpy>=1.26.0",
    "pandas==2.2.3",
    "matplotlib==3.9.3",
    "seaborn==0.13.2",
    "click==8.1.7",
    "pyyaml==6.0.2",
    "torch>=2.1.0",
    "accelerate==1.1.1",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.119.3",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.3.1",
]

[project.scripts]
train = "train:main"
evaluate = "evaluate:main"
generate-data = "generate_data:main"
demo = "demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
timeout = 300

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
